syntax = "proto3";

package records;
option go_package = "github.com/pzkt/abe-scripts/abe-scheme/proto";

import "google/protobuf/timestamp.proto";

service RecordService {
  rpc AddEntry(AddEntryRequest) returns (AddEntryResponse) {}
  rpc GetEntry(GetEntryRequest) returns (GetEntryResponse) {}
}

message AddEntryRequest {
  string table = 1;
  bytes write_key_cipher = 2;
  bytes marshaled_public_write_key = 3;
  bytes data_cipher = 4;
}

message AddEntryResponse {
  string id = 1;
  google.protobuf.Timestamp created = 2;
}

message GetEntryRequest {
  string id = 1; // UUID as string
}

message GetEntryResponse {
  bytes data = 1;
}